infrastructure/Keycloak/service.db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-keycloack
  namespace: keycloack
spec:
  ports:
    - name: pgql
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres-keycloack
