infrastructure/Keycloak/service.main.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloack
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
